# mcp-server

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py
mcpadapter/: async_example.py  env.example  main.py  pyproject.toml
mcpadapter/servers/: math_server.py  weather_server.py
mcpresource/: main.py  pokeman.py  pyproject.toml
resource/: mcpreadme.md
sseserver/weather/: langchain_client.py  main.py  pyproject.toml
