[project]
name = "shellserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.13.0",
    "requests>=2.31.0",
]

[tool.uv.workspace]
members = [
    "mcpadapter",
    "mcpresource",
    "sseserver/weather",
]
